--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,19 +25,6 @@ body {
   height: 11%;
   width: 40%;
 }
-.pageonebut {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-}
-.pageonebut:active {
-  background-color: lightskyblue;
-}
 
 .square {
   width: 250px;
@@ -511,7 +498,7 @@ audio {
   }
   .moblieonly {
     visibility: visible;
-    background-image: url('mobile1Idea2_text.gif');
+    background-image: url('mobilePage1_text2.gif');
     background-size: 100% 100%;
     width: 100%;
     height: 100%;
