--- a/assets/styles.css
+++ b/assets/styles.css
@@ -231,6 +231,10 @@ body {
   left: 100%;
   top: 36%;
 }
+.lastflower:active {
+  filter: sepia(100%);
+  filter: brightness(200%);
+}
 
 .leftvid {
   height: 200px;
@@ -409,6 +413,11 @@ audio {
   margin-right: 35%;
   margin-top: 24.75rem;
 }
+.flowertwo:active {
+  filter: sepia(100%);
+  filter: brightness(200%);
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
