--- a/assets/styles.css
+++ b/assets/styles.css
@@ -528,7 +528,7 @@ audio {
     animation-iteration-count: infinite;
     -webkit-animation-iteration-count: infinite;
   }
-  .mobilebutton:active {
+  .mobilebutton:target {
     background-color: lightskyblue;
     -webkit-tap-highlight-color: lightskyblue;
   }
@@ -645,7 +645,7 @@ audio {
     margin-right: 40%;
     margin-bottom: 60%;
   }
-  .pageonebut:active {
+  .pageonebut:target {
     -webkit-tap-highlight-color: lightskyblue;
   }
   .mobilehead {
