--- a/assets/styles.css
+++ b/assets/styles.css
@@ -528,9 +528,11 @@ audio {
     animation-iteration-count: infinite;
     -webkit-animation-iteration-count: infinite;
   }
-  .mobilebutton:target {
+  .mobilebutton:focused,
+  .mobilebutton:visited,
+  .mobilebutton:hover,
+  .mobilebutton:active {
     background-color: lightskyblue;
-    -webkit-tap-highlight-color: lightskyblue;
   }
 
   .box {
@@ -645,9 +647,13 @@ audio {
     margin-right: 40%;
     margin-bottom: 60%;
   }
-  .pageonebut:target {
-    -webkit-tap-highlight-color: lightskyblue;
+  .pageonebut:focused,
+  .pageonebut:visited,
+  .pageonebut:hover,
+  .pageonebut:active {
+    background-color: lightskyblue;
   }
+
   .mobilehead {
     width: 100%;
   }
