--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,7 +16,7 @@ body {
 .front {
   width: 100%;
   height: 100%;
-  background-image: url('Web-page3.2.gif');
+  background-image: url('page3theone.gif');
 
   background-size: 100% 100%;
 }
@@ -485,7 +485,7 @@ audio {
     background-color: white;
   }
   .front {
-    background-image: url('mobilePage3.2.gif');
+    background-image: url('mobilePage3theone.gif');
   }
   .replay {
     background-color: #b7b0f1;
