--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,7 +11,7 @@ body {
 .lastani {
   height: 100%;
   width: 100%;
-  background-image: url('Web_Page2.gif');
+  background-image: url('WebPage4.gif');
   background-size: 100% 100%;
 }
 
@@ -497,7 +497,7 @@ audio {
   .lastani {
     height: 100%;
     width: 100%;
-    background-image: url('mobilePage3.2.gif');
+    background-image: url('mobilepage4.gif') !important;
     background-size: 100% 100%;
   }
 
@@ -699,13 +699,16 @@ audio {
     color: black;
     background-color: white;
   }
+  .lastani {
+    background-image: url('mobilepage4.gif');
+  }
   .front {
     background-image: url('mobilePage3theone.gif');
   }
   .lastani {
     height: 100%;
     width: 100%;
-    background-image: url('mobilePage3.2.gif');
+    background-image: url('mobilepage4.gif') !important;
     background-size: 100% 100%;
   }
 
