--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,7 +11,7 @@ body {
 .lastani {
   height: 100%;
   width: 100%;
-  background-image: url('WebPage4.gif');
+  background-image: url('webpage4.gif');
   background-size: 100% 100%;
 }
 
