--- a/assets/styles.css
+++ b/assets/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .square {
-  width: 250px;
+  width: 240px;
   display: inline;
   margin-left: 7%;
   animation: shake 10s;
@@ -236,7 +236,7 @@ body {
   width: 9rem;
   position: absolute;
   left: 100%;
-  top: 36%;
+  top: 34%;
 }
 .lastflower:active {
   filter: sepia(100%);
@@ -312,8 +312,8 @@ audio {
 
 .please {
   margin-left: 12%;
-  width: 300px;
-  height: 200px;
+  width: 18%;
+  max-height: 18%;
 
   /* The points are: centered top, left bottom, right bottom */
   -webkit-clip-path: polygon(50% 0, 0 100%, 100% 100%);
@@ -331,8 +331,8 @@ audio {
   animation-iteration-count: infinite;
 }
 .circle {
-  width: 190px;
-  height: 170px;
+  width: 150px;
+  height: 150px;
   border-radius: 90%;
   margin-left: 15%;
   object-fit: unset;
