--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,6 +8,7 @@ body {
   overflow: hidden;
   font-family: silom;
 }
+
 .lastani {
   height: 100%;
   width: 100%;
@@ -625,7 +626,7 @@ audio {
     animation: none;
     margin-left: 0%;
     width: 100%;
-    height: 47%;
+    max-height: 49%;
     background: url(test.gif);
     background-repeat: no-repeat;
     clip-path: polygon(50% 0, 0 100%, 100% 100%);
@@ -823,7 +824,7 @@ audio {
     animation: none;
     margin-left: 0%;
     width: 100%;
-    height: 47%;
+    max-height: 47%;
     background: url(test.gif);
     background-repeat: no-repeat;
     clip-path: polygon(50% 0, 0 100%, 100% 100%);
