--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,3 @@
-html,
 body {
   margin: 0px;
   height: 100%;
@@ -7,6 +6,9 @@ body {
   background-color: black;
   overflow: hidden;
   font-family: silom;
+}
+.scrol {
+  overflow: scroll;
 }
 
 .lastani {
